test/valid/66358_recursiveFun/recursive.mag
-- Author: 66358, Gustavo Cardoso
fun fact (n) : Int -> Int = if n == 0 then 1 else n * fact(n - 1)

fun main (_) : Unit -> Unit = print(fact(4))