test/invalid-semantics/66358_wrong_function_arg_type/function_arg_type.mag
-- Author: 66358, Gustavo Cardoso

fun f (x) : Int -> Int =x + 1
fun main (_) : Unit -> Unit = f(true)